# amld2025-multi-agents-workshop

./: .env.example  .gitignore  README.md  pyproject.toml
code-rag/: .env.example  docs.pkl  langgraph.json  pyproject.toml  script_with_main.py
code-rag/src/: script.py
code-rag/workshop/: workshop.ipynb
notebooks/: code_generation_rag_correction.ipynb  unit_tests.ipynb
src/index_graph/: configuration.py  graph.py
src/retrieval_graph/: configuration.py  graph.py  state.py
src/retrieval_graph/researcher_graph/: graph.py
src/shared/: configuration.py  retrieval.py  state.py
workshop/: README.md
workshop/notebooks/: S1 - Intro to LangChain and RAG.ipynb  S1 - Introduction to LangChain and RAG.ipynb  S2 - Building a Multi-Agent System.ipynb
