[project]
name = "code-rag-graph"
version = "0.0.1"
description = "A workflow for generating and testing code solutions"
authors = [
    { name = "Victor Gillioz", email = "victor.gillioz@visium.ch" },
    { name = "Gregoire Clement", email = "gregoire.clement@visium.ch" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.69",
    "langchain>=0.2.14",
    "langchain-community>=0.0.24",
    "langchain-openai>=0.1.22",
    "langchain-chroma>=0.1.2",
    "python-dotenv>=1.0.1",
    "msgspec>=0.18.6",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["code_rag_graph"]
[tool.setuptools.package-dir]
"code_rag_graph" = "src/"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
pydocstyle = { convention = "google" }

[tool.pytest.ini_options]
pythonpath = ["src"]